# Search-doc

./: .gitignore  README.md  Search_doc_task.md  TASK_FOR_CODE.md  benchmark.md  embedding_benchmark.py  inventory.py  library_inventory.csv  pre_mvp_eval.py  project_spec.yaml  pyproject.toml  search-doc.py  todo.txt  venv_start.md
.claude/: settings.local.json
cache/: pre_mvp_meta.npz
cache/eval_reports/: memory_note_stage4.txt  stage3.txt  stage4.txt  stage4_tests.txt
config/: default.yaml
data/: catalog.xlsx
eval/: eval_queries.yaml  eval_queries_v2.yaml  run_eval.py
src/catalog_import/: xlsx_loader.py
src/embedder/: e5_small.py
src/index/: db.py  dedup.py  schema.sql
src/pipeline/: indexer.py
src/search/: fts.py  ranker.py  related.py  semantic.py
src/util/: logging.py
tests/: test_catalog_import.py  test_dedup.py  test_indexer.py  test_ranker.py  test_related.py  test_stage7.py
